--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,38 @@
 @import "~bootstrap/scss/bootstrap";
 
+$quad-width: 50%;
+$quad-height: 400px;
+
 body {
     background-color: blue;
+  }
+
+  #app {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  #eat {
+    width: $quad-width;
+    background-color: pink;
+    height: $quad-height;
+  }
+
+  #play {
+    width: $quad-width;
+    height: $quad-height;
+    background-color: rgb(7, 212, 110);
+  }
+
+  #fight {
+    width: $quad-width;
+    height: $quad-height;
+    background-color: rgb(243, 51, 51);
+  }
+
+  #sleep {
+    width: $quad-width;
+    height: $quad-height;
+    background-color: lightblue;
   }
