--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,9 @@
 
 $quad-width: 50%;
 $quad-height: 400px;
+$border-radius: 6px;
+$button-width: 150px;
+$button-height: 40px;
 
 body {
     background-color: blue;
@@ -35,4 +38,20 @@ body {
     width: $quad-width;
     height: $quad-height;
     background-color: lightblue;
+  }
+
+  .button {
+    width: $button-width;
+    height: $button-height;
+    border-radius: $border-radius;
+    margin: 1em;
+    background-color: rgb(22, 67, 95);
+    color: white;
+    border: none;
+    box-shadow: 5px 5px 10px 0px #FFF;
+  }
+
+  .quad {
+    display: flex;
+    justify-content: space-between;
   }
