added progress bars

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -51,7 +51,16 @@ body {
     box-shadow: 5px 5px 10px 0px #FFF;
   }
 
-  .quad {
+  .button-container {
     display: flex;
     justify-content: space-between;
+  }
+
+  #progress-bar {
+    display: flex;
+    justify-content: center;
+  }
+
+  progress {
+    height: 60px;
   }
