--- a/src/javascripts/components/fight/fight.scss
+++ b/src/javascripts/components/fight/fight.scss
@@ -5,3 +5,27 @@
   height: $quad-height;
   background-color: rgb(243, 51, 51);
 }
+
+#strength-progress-container {
+  display: flex;
+  justify-content: center;
+
+
+  #strength-progress {
+    width: $bar-width;
+    background-color: rgb(190, 190, 201);
+    border-radius: $border-radius;
+    box-shadow: 5px 5px 10px 0px;
+    
+
+  
+    #strength-bar {
+      height: 15px;
+      background-color: rgb(74, 136, 207);
+      text-align: center;
+      line-height: 30px;
+      color: white;
+      border-radius: $border-radius;
+    }
+  }
+}
