--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,4 +4,8 @@ $border-radius: 6px;
 $button-width: 150px;
 $button-height: 40px;
 $bar-width: 200px;
+$bar-height: 15px;
+$bar-color: rgb(74, 136, 207);
+$bar-background: rgb(190, 190, 201);
 $box-shadow: 5px 5px 10px 0px white;
+$bar-box-shadow: 5px 5px 10px 0px;
