--- a/src/javascripts/components/play/play.scss
+++ b/src/javascripts/components/play/play.scss
@@ -5,3 +5,27 @@
     height: $quad-height;
     background-color: rgb(7, 212, 110);
 }
+
+#fun-progress-container {
+    display: flex;
+    justify-content: center;
+  
+  
+    #fun-progress {
+      width: $bar-width;
+      background-color: rgb(190, 190, 201);
+      border-radius: $border-radius;
+      box-shadow: 5px 5px 10px 0px;
+      
+  
+    
+      #fun-bar {
+        height: 15px;
+        background-color: rgb(74, 136, 207);
+        text-align: center;
+        
+        color: white;
+        border-radius: $border-radius;
+      }
+    }
+  }
