--- a/src/javascripts/components/play/play.scss
+++ b/src/javascripts/components/play/play.scss
@@ -12,19 +12,17 @@
   
   
     #fun-progress {
-      width: $bar-width;
-      background-color: rgb(190, 190, 201);
-      border-radius: $border-radius;
-      box-shadow: 5px 5px 10px 0px;
+        width: $bar-width;
+        background-color: $bar-background;
+        border-radius: $border-radius;
+        box-shadow: $bar-box-shadow;
       
   
     
       #fun-bar {
-        height: 15px;
-        background-color: rgb(74, 136, 207);
+        height: $bar-height;
+        background-color: $bar-color;
         text-align: center;
-        
-        color: white;
         border-radius: $border-radius;
       }
     }
