--- a/src/javascripts/components/sleep/sleep.scss
+++ b/src/javascripts/components/sleep/sleep.scss
@@ -6,3 +6,25 @@
     height: $quad-height;
     background-color: lightblue;
 }
+
+#sleep-progress-container {
+    display: flex;
+    justify-content: center;
+  
+  
+    #sleep-progress {
+      width: $bar-width;
+      background-color: $bar-background;
+      border-radius: $border-radius;
+      box-shadow: $bar-box-shadow;
+      
+  
+    
+      #sleep-bar {
+        height: $bar-height;
+        background-color: $bar-color;
+        text-align: center;
+        border-radius: $border-radius;
+      }
+    }
+  }
