--- a/src/javascripts/components/play/play.scss
+++ b/src/javascripts/components/play/play.scss
@@ -4,6 +4,8 @@
     width: $quad-width;
     height: $quad-height;
     background-color: rgb(7, 212, 110);
+    float: right;
+    margin-top: 50px;
 }
 
 #fun-progress-container {
