--- a/src/assets/image.scss
+++ b/src/assets/image.scss
@@ -1,8 +1,10 @@
 img {
   width: 175px;
   height: 175px;
-  margin-top: -800px;
   border-radius: 40px;
-  text-align: center;
-  
+  position: absolute;
+  display: inline-block;
+  justify-content: center;
+  margin-top: -38%;
+  margin-left: 43%;
 }
