--- a/src/javascripts/components/fight/fight.scss
+++ b/src/javascripts/components/fight/fight.scss
@@ -6,9 +6,27 @@
   background-color: rgb(243, 51, 51);
 }
 
+#fight-button-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.fight-button {
+  width: $button-width;
+  height: $button-height;
+  border-radius: $border-radius;
+  margin: 1em 1em 1em 1em;
+  background-color: rgb(22, 67, 95);
+  color: white;
+  border: none;
+  box-shadow: $box-shadow;
+}
+
 #strength-progress-container {
   display: flex;
   justify-content: center;
+  margin-top: 300px;
+  
 
 
   #strength-progress {
